--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 			<version>2.3.13</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.6</version>
+		    <scope>test</scope>
+		</dependency>
+				
 
 	</dependencies>
 </project>
