add hsql test cases

--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
-			<version>6.1.0.jre7</version>
-			<scope>test</scope>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP-java6</artifactId>
 			<version>2.3.13</version>
@@ -50,12 +42,11 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.6</version>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.3.4</version>
 		    <scope>test</scope>
 		</dependency>
-				
 
 	</dependencies>
 </project>
