--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,16 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			
+			<plugin>
+			    <groupId>org.eluder.coveralls</groupId>
+			    <artifactId>coveralls-maven-plugin</artifactId>
+			    <version>2.2.0</version>
+			    <configuration>
+				<repoToken>fWXV1NvtGjLgOIWLHMGpiTsAF9OxXxkoN</repoToken>
+			    </configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	
