--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,16 @@
 			</plugin>
 			
 			<plugin>
-			    <groupId>org.eluder.coveralls</groupId>
-			    <artifactId>coveralls-maven-plugin</artifactId>
-			    <version>3.2.1</version>
-			    <configuration>
-				<repoToken>${env.coveralls_token}</repoToken>
-			    </configuration>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<check />
+				</configuration>
 			</plugin>
 
 		</plugins>
