--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,27 @@
 			<version>1.7.22</version>
 			<scope>test</scope>
 		</dependency>
-        
+
 		<dependency>
 		    <groupId>org.hsqldb</groupId>
 		    <artifactId>hsqldb</artifactId>
 		    <version>2.3.4</version>
 		    <scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>ch.vorburger.mariaDB4j</groupId>
+            <artifactId>mariaDB4j</artifactId>
+            <version>2.2.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 	
