--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
-#script: "mvn cobertura:cobertura"
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+script: "mvn cobertura:cobertura"
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 jdk:
   - oraclejdk8
-  - oraclejdk7
-  - openjdk7
+#  - oraclejdk7
+#  - openjdk7
 install:
   - mvn --settings .travis/settings.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
 before_install:
@@ -20,11 +20,11 @@ deploy:
       repo: mhewedy/spwrap
       branch: master
       jdk: oraclejdk8
-  -
-    provider: script
-    script: .travis/deploy.sh
-    skip_cleanup: true
-    on:
-      repo: mhewedy/spwrap
-      tags: true
-      jdk: oraclejdk8
+#  -
+#    provider: script
+#    script: .travis/deploy.sh
+#    skip_cleanup: true
+#    on:
+#      repo: mhewedy/spwrap
+#      tags: true
+#      jdk: oraclejdk8
