--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: java
 script: "mvn cobertura:cobertura"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-jdk:
-  - oraclejdk8
+#jdk:
+#  - oraclejdk8
 #  - oraclejdk7
 #  - openjdk7
 install:
-  - mvn --settings .travis/settings.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
+  - mvn --settings .travis/settings.xml install -Dgpg.skip -B -V
+#  - mvn --settings .travis/settings.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
 before_install:
   - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --batch --import; fi
   - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --batch --import-ownertrust; fi
@@ -19,7 +20,7 @@ deploy:
     on:
       repo: mhewedy/spwrap
       branch: master
-      jdk: oraclejdk8
+#      jdk: oraclejdk8
 #  -
 #    provider: script
 #    script: .travis/deploy.sh
