--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
-script: "mvn cobertura:cobertura"
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#script: "mvn --settings .travis/settings.xml cobertura:cobertura"
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
 #jdk:
 #  - oraclejdk8
 #  - oraclejdk7
@@ -12,14 +12,14 @@ before_install:
 install:
   - mvn --settings .travis/settings.xml clean install -Dgpg.skip -B -V
 #  - mvn --settings .travis/settings.xml clean install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
-deploy:
-  -
-    provider: script
-    script: .travis/deploy.sh
-    skip_cleanup: true
-    on:
-      repo: mhewedy/spwrap
-      branch: master
+#deploy:
+#  -
+#    provider: script
+#    script: .travis/deploy.sh
+#    skip_cleanup: true
+#    on:
+#      repo: mhewedy/spwrap
+#      branch: master
 #      jdk: oraclejdk8
 #  -
 #    provider: script
