--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+sudo: false
 #script: "mvn --settings .travis/settings.xml cobertura:cobertura"
 #after_success:
 #  - bash <(curl -s https://codecov.io/bash)
