--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,6 @@
-language: java
-sudo: false
-#script: "mvn --settings .travis/settings.xml cobertura:cobertura"
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
-#jdk:
-#  - oraclejdk8
-#  - oraclejdk7
-#  - openjdk7
-before_install:
-  - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --batch --import; fi
-  - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --batch --import-ownertrust; fi
-install:
-  - mvn --settings .travis/settings.xml clean install -Dgpg.skip -B -V
-#  - mvn --settings .travis/settings.xml clean install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
-#deploy:
-#  -
-#    provider: script
-#    script: .travis/deploy.sh
-#    skip_cleanup: true
-#    on:
-#      repo: mhewedy/spwrap
-#      branch: master
-#      jdk: oraclejdk8
-#  -
-#    provider: script
-#    script: .travis/deploy.sh
-#    skip_cleanup: true
-#    on:
-#      repo: mhewedy/spwrap
-#      tags: true
-#      jdk: oraclejdk8
+anguage: java
+  sudo: false
+ script: "mvn cobertura:cobertura"
+
+ after_success:
+   - bash <(curl -s https://codecov.io/bash)
