--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ sudo: false
 script: "mvn --settings .travis/settings.xml -Dgpg.skip cobertura:cobertura"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+jdk:
+  - oraclejdk8
+  - oraclejdk7
+  - openjdk6
 before_install:
   - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --batch --import; fi
   - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust; fi
@@ -17,3 +21,4 @@ deploy:
     on:
       repo: mhewedy/spwrap
       branch: master
+      jdk: oraclejdk8
