add unit test case for DbUtilsResultSetAutoMapper

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
         </dependency>
 
         <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>uk.org.lidalia</groupId>
             <artifactId>slf4j-test</artifactId>
             <version>1.0.0-jdk6</version>
