--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>ojdbc6</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/test/resources/libs/ojdbc6.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
     <build>
