adding docker service to travsi.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
 language: java
-sudo: false
-script: "mvn --settings .travis/settings.xml -Dgpg.skip cobertura:cobertura"
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+sudo: required
+
 jdk:
   - oraclejdk8
   - oraclejdk7
   - openjdk6
+
+services:
+  - docker
+
 before_install:
   - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --batch --import; fi
   - if [ ! -z "$GPG_OWNERTRUST" ]; then echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust; fi
 install:
   - mvn --settings .travis/settings.xml clean install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
+
+before_script: ./src/test/resources/docker/run_all.sh
+
+script: "mvn --settings .travis/settings.xml -Dgpg.skip cobertura:cobertura"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 deploy:
   -
