--- a/pom.xml
+++ b/pom.xml
@@ -108,9 +108,11 @@
         </dependency>
 
         <dependency>
-            <groupId>net.sourceforge.jtds</groupId>
-            <artifactId>jtds</artifactId>
-            <version>1.3.1</version>
+            <groupId>com.microsoft</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>sqljdbc4</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/test/resources/libs/sqljdbc4.jar</systemPath>
         </dependency>
 
         <dependency>
