--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ deploy:
     script: .travis/deploy.sh
     skip_cleanup: true
     on:
+      tags: true
       repo: mhewedy/spwrap
       branch: master
       jdk: openjdk6
